Finished README.md, also polished tests so they can find files inside the server folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,16 @@
 __pycache__/
-*.pyc
-instance/
+*.py[cod]
+.venv/
+env/
 .env
+*.db
+*.sqlite3
+migrations/__pycache__/
+.pytest_cache/
+.vscode/
+.idea/
+.DS_Store
+*.log
+build/
+dist/
+*.egg-info/
