--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,12 @@ importlib-metadata = "==6.0.0"
 importlib-resources = "==5.10.0"
 ipdb = "==0.13.9"
 marshmallow = "==3.20.1"
+python-dotenv = "*"
 
 [dev-packages]
+pytest = "*"
+flake8 = "*"
+black = "*"
 
 [requires]
 python_version = "3.8"
